[tool.poetry]
name = "repl-nix-modelpathhandler-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask-sqlalchemy = "^3.1.1"
transformers = "^4.44.2"
flask = "^3.0.3"
torch = "^2.4.1"
safetensors = "^0.4.5"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
